rspec-tools/tests/resources/invalid-asciidoc/include_stuck_after.adoc
# Header

include::somefile.adoc[]
* content just after